// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldPopover snapshots should render TextFieldPopover 1`] = `
<DocumentFragment>
  <div
    class="TextFieldPopover"
  >
    <div
      class="css-1jnxvbp TextFieldPopover__icon classNameIcon Icon Icon--clickable"
      data-test-icon="variant"
      height="12"
      name="Variant"
      width="12"
    />
    <div
      class="Popover"
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldPopover snapshots should render when attached value 1`] = `
<DocumentFragment>
  <div
    class="TextFieldPopover"
  >
    <div
      class="css-1jnxvbp TextFieldPopover__icon classNameIcon Icon Icon--clickable"
      data-test-icon="detached"
      height="12"
      name="Detached"
      width="12"
    />
    <div
      class="Popover"
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldPopover snapshots should render with opened popover 1`] = `
<DocumentFragment>
  <div
    class="TextFieldPopover"
  >
    <div
      class="css-1jnxvbp TextFieldPopover__icon classNameIcon Icon Icon--clickable"
      data-test-icon="variant"
      height="12"
      name="Variant"
      width="12"
    />
    <div
      class="Popover Popover--selected"
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;
